--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <option>invite</option>
             <option>stats</option>
             <option>profile</option>
+            <option>changelog</option>
         </select>
         <div id="help" style="display:block">
             <p class="head">View the bot's command list embed</p>
@@ -90,6 +91,12 @@
             <p class="ex">Options<br/>Member - The person who's stats you want to view</p>
             <p class="ex">Example Output</p>
             <img src="https://media.discordapp.net/attachments/876316246608605214/885034543839596604/unknown.png">
+        </div>
+        <div id="changelog">
+            <p class="head">View the bot's changes</p>
+            <p class="ex">Options<br/>Version - The specific version to focus on</p>
+            <p class="ex">Example Output</p>
+            <img src="https://media.discordapp.net/attachments/876316246608605214/885238917081726976/unknown.png">
         </div>
         <script>
             function Change(){
